--- a/program/Makefile
+++ b/program/Makefile
@@ -10,7 +10,7 @@ CC = gcc
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@ $(CDEF)
 
-blinker: emulator.o  main.o ../socket.o ../lib/platform.o ../lib/timers.o ../util.o
+blinker: emulator.o  main.o ../lib/socket.o ../lib/platform.o ../lib/timers.o ../lib/util.o ../lib/debug.o
 	$(CC) $+ -Wall -o $@
 
 clean:
