--- a/gui/package.json
+++ b/gui/package.json
@@ -2,13 +2,13 @@
   "name": "emul-gui",
   "version": "0.0.0",
   "description": "ERROR: No README.md file found!",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "",
   "author": "Lars Vierbergen",
-  "license": "BSD",
+  "license": "MIT",
   "dependencies": {
     "appjs": "0.0.20"
   }
